# api-observability-elk-stack

./: .coveragerc  .env-example  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 9a3fda0386a7_.py
task_service/application/api/: __init__.py
task_service/application/api/routers/: task_router.py
task_service/domain/entities/: task.py
task_service/domain/use_cases/: create_task_use_case.py  delete_task_use_case.py  get_task_use_case.py  list_tasks_use_case.py  update_task_use_case.py
task_service/infrastructure/: logging.py  settings.py
task_service/infrastructure/database/: connection.py
task_service/infrastructure/database/models/: task_model.py
task_service/infrastructure/repositories/: exceptions.py  task_repository.py
tests/: conftest.py
tests/factories/: __init__.py  task_factory.py  task_model_factory.py
tests/integration/infrastructure/repositories/task_repository/: task_repository_fixtures.py  test_create_task.py  test_delete_task.py  test_get_task_by_id.py  test_get_tasks.py  test_update_task_status.py
tests/unit/use_cases/create_task_use_case/: create_task_use_case_fixtures.py  test_save.py
tests/unit/use_cases/delete_task_use_case/: delete_task_use_case_fixtures.py  test_delete.py
tests/unit/use_cases/get_task_use_case/: get_task_use_case_fixtures.py  test_get.py
tests/unit/use_cases/list_tasks_use_case/: list_tasks_use_case_fixtures.py  test_list_all.py
tests/unit/use_cases/update_task_use_case/: test_update.py  update_task_use_case_fixtures.py
(+6 files in other folders)
